Added argument specs for data key and new tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,4 +60,4 @@ script:
   - black . --check
   - timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for Netbox"; sleep 5; done' || false
   - python tests/integration/netbox-deploy.py
-  - ansible-playbook tests/integration/integration-tests.yml -v
+  - ansible-playbook tests/integration/integration-tests.yml -vvvv
