--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -4079,6 +4079,108 @@
           - test_five['circuit_termination']['pp_info'] == "PP10-24"
           - test_five['circuit_termination']['description'] == "Test description"
           - test_five['msg'] == "circuit_termination test_circuit_a deleted"
+          -
+
+##
+##
+### NETBOX_SERVICE
+##
+##
+    - name: "1 - Device with required information needs to add new service"
+      netbox_device:
+        netbox_url: "http://localhost:32768"
+        netbox_token: "0123456789abcdef0123456789abcdef01234567"
+        data:
+          name: "FOR_SERVICE"
+          device_type: "Cisco Test"
+          device_role: "Core Switch"
+          site: "Test Site"
+          status: "Staged"
+        state: present
+
+    - name: "NETBOX_SERVICE: Create new service"
+      netbox_service:
+        netbox_url: "http://localhost:32768"
+        netbox_token: "0123456789abcdef0123456789abcdef01234567"
+        data:
+          device: "FOR_SERVICE"
+          name: "node-exporter"
+          port: 9100
+          protocol: TCP
+        state: present
+      register: test_service_create
+
+    - name: "NETBOX_SERVICE ASSERT - Create"
+      assert:
+        that:
+          - test_service_create is changed
+          - test_service_create['services']['name'] == "node-exporter"
+          - test_service_create['services']['port'] == 9100
+          - test_service_create['services']['protocol'] == 6
+          - test_service_create['diff']['after']['state'] == "present"
+          - test_service_create['diff']['before']['state'] == "absent"
+          - test_service_create['msg'] == "services node-exporter created"
+
+    - name: "NETBOX_SERVICE: Test idempotence"
+      netbox_service:
+        netbox_url: "http://localhost:32768"
+        netbox_token: "0123456789abcdef0123456789abcdef01234567"
+        data:
+          device: "FOR_SERVICE"
+          name: "node-exporter"
+          port: 9100
+          protocol: TCP
+        state: present
+      register: test_service_idempotence
+
+    - name: "NETBOX_SERVICE ASSERT - Not changed"
+      assert:
+        that:
+          - test_service_idempotence['services']['name'] == "node-exporter"
+          - test_service_idempotence['services']['port'] == 9100
+          - test_service_idempotence['services']['protocol'] == 6
+          - test_service_idempotence['msg'] == "services node-exporter already exists"
+    - name: "NETBOX_SERVICE: Test update"
+      netbox_service:
+        netbox_url: "http://localhost:32768"
+        netbox_token: "0123456789abcdef0123456789abcdef01234567"
+        data:
+          device: "FOR_SERVICE"
+          name: "node-exporter"
+          port: 9100
+          protocol: UDP
+        state: present
+      register: test_service_update
+
+    - name: "NETBOX_SERVICE ASSERT - Service has been updated"
+      assert:
+        that:
+          - test_service_update is changed
+          - test_service_update['diff']['before']['protocol'] == 6
+          - test_service_update['diff']['after']['protocol'] == 17
+          - test_service_update['msg'] == "services node-exporter updated"
+
+
+    - name: "NETBOX_SERVICE: Test service deletion"
+      netbox_service:
+        netbox_url: "http://localhost:32768"
+        netbox_token: "0123456789abcdef0123456789abcdef01234567"
+        data:
+          device: "FOR_SERVICE"
+          name: "node-exporter"
+          port: 9100
+          protocol: UDP
+        state: absent
+      register: test_service_delete
+
+    - name: "NETBOX_SERVICE ASSERT - Service has been deleted"
+      assert:
+        that:
+          - test_service_delete is changed
+          - test_service_delete['diff']['after']['state'] == "absent"
+          - test_service_delete['diff']['before']['state'] == "present"
+          - test_service_delete['msg'] == "services node-exporter deleted"
+
 
 ##
 ##
@@ -4148,3 +4250,6 @@
         that: "{{ query_result|json_query('[?value.display_name==`L2`]')|count }} == 1"
       vars:
           query_result: "{{ query('netbox_community.ansible_modules.netbox', 'devices', api_filter='role=core-switch tag=lookup', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+
+
+
