--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -373,6 +373,39 @@
           - test_seven['msg'] == "interface GigabitEthernet1 already exists"
           - test_seven['interface']['name'] == "GigabitEthernet1"
           - test_seven['interface']['device'] == 1
+
+    - name: "8 - Create interface and assign it to parent LAG - non dict"
+      netbox_device_interface:
+        netbox_url: "http://localhost:32768"
+        netbox_token: "0123456789abcdef0123456789abcdef01234567"
+        data:
+          device: test100
+          name: GigabitEthernet4
+          enabled: false
+          form_factor: 1000Base-t (1GE)
+          lag: "port-channel1"
+          mtu: 1600
+          mgmt_only: false
+          mode: Access
+        state: present
+      register: test_eight
+
+    - name: "8 - ASSERT"
+      assert:
+        that:
+          - test_eight is changed
+          - test_eight['msg'] == "interface GigabitEthernet4 created"
+          - test_eight['diff']['before']['state'] == 'absent'
+          - test_eight['diff']['after']['state'] == 'present'
+          - test_eight['interface']['name'] == "GigabitEthernet4"
+          - test_eight['interface']['device'] == 1
+          - test_eight['interface']['enabled'] == false
+          - test_eight['interface']['form_factor'] == 1000
+          - test_eight['interface']['mgmt_only'] == false
+          - test_eight['interface']['lag'] == 14
+          - test_eight['interface']['mode'] == 100
+          - test_eight['interface']['mtu'] == 1600
+
 ##
 ##
 ### NETBOX_IP_ADDRESS
