Updated galaxy.yml and LICENSE to reflect GPL 3.0+ since some of the content is from Ansible and other contributors

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -26,12 +26,12 @@ description: This is a collection of Netbox Ansible modules
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
-license:
-  - MIT
+#license:
+#  - GPL-3.0-or-later
 
 # The path to the license file for the collection. This path is relative to the root of the collection. This key is
 # mutually exclusive with 'license'
-license_file: ""
+license_file: "LICENSE"
 
 # A list of tags you want to associate with the collection for indexing/searching. A tag name has the same character
 # requirements as 'namespace' and 'name'
