--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,32 @@ matrix:
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0
         - pip install pynetbox cryptography codecov jmespath ansible
 
-    - name: "Python 3.6 - Netbox Latest - Ansible Devel"
+    - name: "Python 3.6 - Netbox 2.6 - Ansible Devel"
       python: 3.6
       env: PYTHON_VER=3.6 VERSION=v2.6
       install:
         - cd ..
         # Setup netbox container for integration testing
         - git clone https://github.com/FragmentedPacket/netbox-docker.git
+        - cd netbox-docker
+        - docker-compose pull
+        - docker-compose up -d
+        - cd ..
+        - pip install -U pip
+        - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0
+        - pip install pynetbox cryptography jmespath
+        - git clone https://github.com/ansible/ansible.git
+        - cd ansible
+        - source hacking/env-setup
+        - cd  ..
+
+    - name: "Python 3.6 - Netbox Latest - Ansible Devel"
+      python: 3.6
+      env: PYTHON_VER=3.6 VERSION=v2.7
+      install:
+        - cd ..
+        # Setup netbox container for integration testing
+        - git clone https://github.com/netbox-community/netbox-docker.git
         - cd netbox-docker
         - docker-compose pull
         - docker-compose up -d
