--- a/tests/integration/regression-tests.yml
+++ b/tests/integration/regression-tests.yml
@@ -9,7 +9,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
   vars:
     netbox_url: "http://localhost:32768"
 
