--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -9,7 +9,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Device with required information"
@@ -218,7 +218,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Interface with required information"
@@ -465,7 +465,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Create IP address within Netbox with only required information - State: Present"
@@ -798,7 +798,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Create prefix within Netbox with only required information"
@@ -1051,7 +1051,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Create site within Netbox with only required information"
@@ -1189,7 +1189,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Test tenant creation"
@@ -1302,7 +1302,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Test tenant group creation"
@@ -1366,7 +1366,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Test rack creation"
@@ -1551,7 +1551,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "RACK_ROLE 1: Necessary info creation"
@@ -1640,7 +1640,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "RACK_GROUP 1: Necessary info creation"
@@ -1710,7 +1710,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "MANUFACTURER 1: Necessary info creation"
@@ -1809,7 +1809,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "PLATFORM 1: Necessary info creation"
@@ -1916,7 +1916,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "DEVICE_TYPE 1: Necessary info creation"
@@ -2055,7 +2055,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "DEVICE_ROLE 1: Necessary info creation"
@@ -2164,7 +2164,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "IPAM_ROLE 1: Necessary info creation"
@@ -2266,7 +2266,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "VLAN_GROUP 1: Necessary info creation"
@@ -2392,7 +2392,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "VLAN 1: Necessary info creation"
@@ -2543,7 +2543,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "VRF 1: Necessary info creation"
@@ -2679,7 +2679,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "RIR 1: Necessary info creation"
@@ -2766,7 +2766,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "AGGREGATE 1: Necessary info creation"
@@ -2889,7 +2889,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "REGION 1: Necessary info creation"
@@ -2976,7 +2976,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "DEVICE_BAY 1: Necessary info creation"
@@ -3071,7 +3071,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "INVENTORY_ITEM 1: Necessary info creation"
@@ -3183,7 +3183,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "VIRTUAL_MACHINE 1: Necessary info creation"
@@ -3290,7 +3290,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "CLUSTER 1: Necessary info creation"
@@ -3393,7 +3393,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "CLUSTER_GROUP 1: Necessary info creation"
@@ -3497,7 +3497,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "CLUSTER_TYPE 1: Necessary info creation"
@@ -3601,7 +3601,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "NETBOX_VM_INTERFACE 1: Necessary info creation"
@@ -3767,7 +3767,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "NETBOX_PROVIDER 1: Create provider within Netbox with only required information"
@@ -3873,7 +3873,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "CIRCUIT_TYPE 1: Necessary info creation"
@@ -3976,7 +3976,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "NETBOX_CIRCUIT 1: Create provider within Netbox with only required information"
@@ -4092,7 +4092,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "NETBOX_CIRCUIT_TERMINATION 1: Create provider within Netbox with only required information"
@@ -4334,25 +4334,25 @@
       assert:
         that: "{{ query_result|count }} == 3"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'sites', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'sites', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
 
     - name: "NETBOX_LOOKUP 2: Query doesn't return Wibble (sanity check json_query)"
       assert:
         that: "{{ query_result|json_query('[?value.display_name==`Wibble`]')|count }} == 0"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'devices', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'devices', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
 
     - name: "NETBOX_LOOKUP 3: Device query returns exactly one TestDeviceR1"
       assert:
         that: "{{ query_result|json_query('[?value.display_name==`TestDeviceR1`]')|count }} == 1"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'devices', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'devices', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
 
     - name: "NETBOX_LOOKUP 4: VLAN ID 400 can be queried and is named 'Test VLAN'"
       assert:
         that: "{{ (query_result|json_query('[?value.vid==`400`].value.name'))[0] == 'Test VLAN' }}"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'vlans', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'vlans', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
 
     - name: "NETBOX_LOOKUP 5: Add one of two devices for lookup filter test."
       netbox_device:
@@ -4386,4 +4386,4 @@
       assert:
         that: "{{ query_result|json_query('[?value.display_name==`L2`]')|count }} == 1"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'devices', api_filter='role=core-switch tag=lookup', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'devices', api_filter='role=core-switch tag=lookup', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
